--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,25 @@
         android:theme="@style/Theme.TestChatApp"
         tools:targetApi="31">
         <activity
+            android:name=".pages.ChatMessangerPage"
+            android:exported="false" />
+        <activity
             android:name=".pages.UsersChatListActivity"
             android:exported="true"
-            android:theme="@style/Theme.TestChatApp.noActionCustomBar"
-            >
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".pages.SignUpActivity"
-            android:exported="true">
-
-        </activity>
-
-
+            android:exported="true"></activity>
         <activity
             android:name=".pages.LoginActivityScreen"
             android:exported="true"
-            android:theme="@style/Theme.TestChatApp.noActionCustomBar"
-            >
-
-        </activity>
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
