--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,20 @@
         tools:targetApi="31">
         <activity
             android:name=".pages.ChatMessangerPage"
-            android:exported="false" />
-        <activity
-            android:name=".pages.UsersChatListActivity"
             android:exported="true"
             android:theme="@style/Theme.TestChatApp.noActionCustomBar">
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".pages.UsersChatListActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
+
         </activity>
         <activity
             android:name=".pages.SignUpActivity"
