--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestChatApp"
         tools:targetApi="31">
+
         <activity
             android:name=".pages.ChatMessangerPage"
             android:exported="true"
-            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
-        >
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar"
+            android:windowSoftInputMode="adjustPan"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".pages.UsersChatListActivity"
             android:exported="true"
@@ -31,11 +35,15 @@
         </activity>
         <activity
             android:name=".pages.SignUpActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".pages.LoginActivityScreen"
             android:exported="true"
-            android:theme="@style/Theme.TestChatApp.noActionCustomBar"></activity>
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
