--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".pages.ChatMessangerPage"
+            android:name=".featuer_chat.presentation.activites.chat_massenger_activity.ChatMessangerPage"
             android:exported="true"
             android:theme="@style/Theme.TestChatApp.noActionCustomBar"
             android:windowSoftInputMode="adjustPan"
@@ -28,24 +28,24 @@
         </activity>
 
         <activity
-            android:name=".pages.UsersChatListActivity"
+            android:name=".featuer_chat.presentation.activites.user_chat_list_activity.UsersChatListActivity"
             android:exported="true"
             android:theme="@style/Theme.TestChatApp.noActionCustomBar">
 
         </activity>
         <activity
-            android:name=".pages.SignUpActivity"
+            android:name=".feature_authetication.presentation.activites.sign_up_activity.SignUpActivity"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".pages.LoginActivityScreen"
+            android:name=".feature_authetication.presentation.activites.login_activity.LoginActivityScreen"
             android:exported="true"
             android:theme="@style/Theme.TestChatApp.noActionCustomBar">
 
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".featuer_chat.presentation.activites.MainActivity"
             android:exported="true" />
     </application>
 
