--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.9.10'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
