--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
         android:name=".feature_authetication.presentation.BaseApp"
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -42,17 +43,17 @@
             android:theme="@style/Theme.TestChatApp.noActionCustomBar"
             android:windowSoftInputMode="adjustPan"
             >
+
+        </activity>
+        <activity
+            android:name=".feature_authetication.presentation.activites.login_activity.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".feature_authetication.presentation.activites.login_activity.LoginActivityScreen"
-            android:exported="true"
-            android:theme="@style/Theme.TestChatApp.noActionCustomBar">
-
         </activity>
         <activity
             android:name=".featuer_chat.presentation.activites.MainActivity"
