--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.9.10'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
 
 }
