--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestChatApp"
-        tools:targetApi="31">
+        android:windowSoftInputMode="adjustPan"
+        tools:targetApi="31"
+        >
         <activity
             android:name=".featuer_chat.presentation.activites.users_lists_add_friend.UsersListAddActivity"
             android:exported="true"
