--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.1.1'
     implementation platform("com.google.firebase:firebase-bom:32.2.2")
     implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-storage")
+
     implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
@@ -83,6 +86,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.activity:activity:1.9.0'
+
+    implementation 'com.google.firebase:firebase-firestore:25.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
