--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestChatApp"
         android:windowSoftInputMode="adjustPan"
-        tools:targetApi="31">
+        tools:targetApi="34">
 
         <activity
             android:name=".feature_authetication.presentation.activites.MainActivity"
@@ -53,5 +53,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
 </manifest>
