--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,15 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.4.1' apply false
-    id 'com.android.library' version '8.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.gms.google-services' version "4.3.15" apply false
+    id 'com.android.application' version '8.1.0' apply false
+    id 'com.android.library' version '8.1.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.23' apply false
+
+    id 'com.google.gms.google-services' version "4.4.2" apply false
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
+
