--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.9.0'
 
     implementation 'com.google.firebase:firebase-firestore:25.0.0'
+    implementation 'androidx.activity:activity:1.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
