--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:name=".feature_authetication.presentation.BaseApp"
         android:allowBackup="true"
@@ -35,7 +40,7 @@
             android:exported="true"
             android:theme="@style/Theme.TestChatApp.noActionCustomBar" />
         <activity
-            android:name=".featuer_chat.presentation.activites.chat_massenger_activity.ChatMessangerActivity"
+            android:name=".featuer_chat.presentation.activites.chat_massenger_activity.ChatMessengerActivity"
             android:exported="true"
             android:theme="@style/myTheme" />
         <activity
@@ -54,10 +59,6 @@
             android:theme="@style/Theme.TestChatApp.noActionCustomBar" />
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 </manifest>
