--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation  'com.github.massoudss:waveformSeekBar:5.0.2'
+    implementation "androidx.media3:media3-exoplayer:1.3.1"
+    implementation "androidx.media3:media3-exoplayer-dash:1.3.1"
+    implementation "androidx.media3:media3-ui:1.3.1"
 
 
 
