--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer-dash:1.3.1"
     implementation "androidx.media3:media3-ui:1.3.1"
 
+    implementation 'com.github.lincollincol:amplituda:2.2.2'
 
 
 
